--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,178 @@
-<p>contact works!</p>
+<!-- ********************Banner**************** -->
+<section class="sv-hero s1">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sv-hero-inner">
+          <svg width="152px" height="3px" viewBox="0 0 152 3" version="1.1">
+            <path
+              d="M0 0.5L150 0.5"
+              transform="translate(1 1)"
+              id="Path-4"
+              fill="none"
+              fill-rule="evenodd"
+              stroke="#FFFFFF"
+              stroke-width="2"
+              stroke-linecap="round"
+            />
+          </svg>
+          <h2 class="mt-3">
+            Whatever you need, we’ve got your back. Let’s connect
+          </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ***************quotes*********************** -->
+<section class="website-feature">
+  <div class="container">
+    <div class="row justify-content-end">
+      <div class="col-md-6">
+        <div class="tssp">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form">
+          <form class="login-form" [formGroup]="contactUs">
+            <div class="form-group">
+              <input
+                type="text"
+                placeholder="Your full name"
+                formControlName="fullName"
+                class="form-control"
+                autocomplete="current-Expected"
+              />
+              <div
+                *ngIf="
+                  formName().fullName.invalid && formName().fullName.touched
+                "
+              >
+                <div *ngIf="formName().fullName.errors.required">
+                  <mat-error>Please Enter Full Name</mat-error>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="form-group">
+                <input
+                  type="text"
+                  placeholder="Email"
+                  autocomplete="Email"
+                  formControlName="email"
+                  class="form-control"
+                />
+                <div
+                  *ngIf="formName().email.invalid && formName().email.touched"
+                >
+                  <div *ngIf="formName().email.errors.required">
+                    <mat-error *ngIf="formName().email.errors.required"
+                      >Email is required</mat-error
+                    >
+                    <mat-error *ngIf="formName().email.errors.email"
+                      >Email must be a valid Email address</mat-error
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <input
+                type="number"
+                placeholder="phone"
+                formControlName="phone"
+                class="form-control"
+                autocomplete="current-Phone"
+              />
+              <div *ngIf="formName().phone.invalid && formName().phone.touched">
+                <div *ngIf="formName().phone.errors.required">
+                  <mat-error>Phone No is required</mat-error>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <input
+                type="text"
+                placeholder="Message"
+                formControlName="message"
+                class="form-control"
+              />
+              <div
+                *ngIf="formName().message.invalid && formName().message.touched"
+              >
+                <div *ngIf="formName().message.errors.required">
+                  <mat-error *ngIf="formName().message.errors.required"
+                    >Message is required</mat-error
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  formControlName="conditon"
+                  value=""
+                  id="flexCheckChecked"
+                  checked
+                />
+                <label
+                  class="form-check-label"
+                  class="terms-condition"
+                  for="flexCheckChecked"
+                >
+                  by clicking this, you are agree to our ‘terms & conditions’
+                </label>
+              </div>
+            </div>
+
+            <div class="form-group text-left">
+              <button class="btn btn-main" (click)="onSubmit(contactUs)">
+                <!-- <span
+                  class="spinner-border spinner-border-sm mr-1"
+                  *ngIf="applicationForm.valid"
+                ></span> -->
+                Submit →
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- *************************find us on map ************* -->
+<section class="find-out">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="text-center">
+          <h2 class="mt-3 fuom">Find us on map</h2>
+        </div>
+        <div class="f-map">
+          <iframe
+            class="w-100"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3692.077973470469!2d70.77659821495428!3d22.275035985336654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959ca47aee2ec3f%3A0x1c2cf8a509c24aae!2sRk%20prime!5e0!3m2!1sen!2sin!4v1600503075546!5m2!1sen!2sin"
+            height="450"
+            frameborder="0"
+            style="border: 0"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          ></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
